// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details reducer should set the capacity 1`] = `
{
  "attendeeInfoFields": [],
  "capacity": 20,
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "iac": "none",
  "on_sale": false,
  "price": "",
  "saleEndDate": "",
  "saleEndDateInput": "",
  "saleEndDateMoment": "",
  "salePrice": "",
  "salePriceChecked": false,
  "saleStartDate": "",
  "saleStartDateInput": "",
  "saleStartDateMoment": "",
  "sku": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
  "type": "default",
}
`;

exports[`Details reducer should set the capacity type 1`] = `
{
  "attendeeInfoFields": [],
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "iac": "none",
  "on_sale": false,
  "price": "",
  "saleEndDate": "",
  "saleEndDateInput": "",
  "saleEndDateMoment": "",
  "salePrice": "",
  "salePriceChecked": false,
  "saleStartDate": "",
  "saleStartDateInput": "",
  "saleStartDateMoment": "",
  "sku": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
  "type": "default",
}
`;

exports[`Details reducer should set the description 1`] = `
{
  "attendeeInfoFields": [],
  "capacity": "",
  "capacityType": "unlimited",
  "description": "new description",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "iac": "none",
  "on_sale": false,
  "price": "",
  "saleEndDate": "",
  "saleEndDateInput": "",
  "saleEndDateMoment": "",
  "salePrice": "",
  "salePriceChecked": false,
  "saleStartDate": "",
  "saleStartDateInput": "",
  "saleStartDateMoment": "",
  "sku": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
  "type": "default",
}
`;

exports[`Details reducer should set the end date 1`] = `
{
  "attendeeInfoFields": [],
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "January 1, 2018",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "iac": "none",
  "on_sale": false,
  "price": "",
  "saleEndDate": "",
  "saleEndDateInput": "",
  "saleEndDateMoment": "",
  "salePrice": "",
  "salePriceChecked": false,
  "saleStartDate": "",
  "saleStartDateInput": "",
  "saleStartDateMoment": "",
  "sku": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
  "type": "default",
}
`;

exports[`Details reducer should set the end date moment 1`] = `
{
  "attendeeInfoFields": [],
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": {
    "type": "moment",
  },
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "iac": "none",
  "on_sale": false,
  "price": "",
  "saleEndDate": "",
  "saleEndDateInput": "",
  "saleEndDateMoment": "",
  "salePrice": "",
  "salePriceChecked": false,
  "saleStartDate": "",
  "saleStartDateInput": "",
  "saleStartDateMoment": "",
  "sku": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
  "type": "default",
}
`;

exports[`Details reducer should set the end time 1`] = `
{
  "attendeeInfoFields": [],
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "13:45",
  "endTimeInput": "9:30 pm",
  "iac": "none",
  "on_sale": false,
  "price": "",
  "saleEndDate": "",
  "saleEndDateInput": "",
  "saleEndDateMoment": "",
  "salePrice": "",
  "salePriceChecked": false,
  "saleStartDate": "",
  "saleStartDateInput": "",
  "saleStartDateMoment": "",
  "sku": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
  "type": "default",
}
`;

exports[`Details reducer should set the end time input 1`] = `
{
  "attendeeInfoFields": [],
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "13:45",
  "iac": "none",
  "on_sale": false,
  "price": "",
  "saleEndDate": "",
  "saleEndDateInput": "",
  "saleEndDateMoment": "",
  "salePrice": "",
  "salePriceChecked": false,
  "saleStartDate": "",
  "saleStartDateInput": "",
  "saleStartDateMoment": "",
  "sku": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
  "type": "default",
}
`;

exports[`Details reducer should set the iac setting 1`] = `
{
  "attendeeInfoFields": [],
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "iac": "none",
  "on_sale": false,
  "price": "",
  "saleEndDate": "",
  "saleEndDateInput": "",
  "saleEndDateMoment": "",
  "salePrice": "",
  "salePriceChecked": false,
  "saleStartDate": "",
  "saleStartDateInput": "",
  "saleStartDateMoment": "",
  "sku": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
  "type": "default",
}
`;

exports[`Details reducer should set the price 1`] = `
{
  "attendeeInfoFields": [],
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "iac": "none",
  "on_sale": false,
  "price": 99,
  "saleEndDate": "",
  "saleEndDateInput": "",
  "saleEndDateMoment": "",
  "salePrice": "",
  "salePriceChecked": false,
  "saleStartDate": "",
  "saleStartDateInput": "",
  "saleStartDateMoment": "",
  "sku": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
  "type": "default",
}
`;

exports[`Details reducer should set the sku 1`] = `
{
  "attendeeInfoFields": [],
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "iac": "none",
  "on_sale": false,
  "price": "",
  "saleEndDate": "",
  "saleEndDateInput": "",
  "saleEndDateMoment": "",
  "salePrice": "",
  "salePriceChecked": false,
  "saleStartDate": "",
  "saleStartDateInput": "",
  "saleStartDateMoment": "",
  "sku": "12345678",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
  "type": "default",
}
`;

exports[`Details reducer should set the start date 1`] = `
{
  "attendeeInfoFields": [],
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "iac": "none",
  "on_sale": false,
  "price": "",
  "saleEndDate": "",
  "saleEndDateInput": "",
  "saleEndDateMoment": "",
  "salePrice": "",
  "salePriceChecked": false,
  "saleStartDate": "",
  "saleStartDateInput": "",
  "saleStartDateMoment": "",
  "sku": "",
  "startDate": "January 1, 2018",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
  "type": "default",
}
`;

exports[`Details reducer should set the start date moment 1`] = `
{
  "attendeeInfoFields": [],
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "iac": "none",
  "on_sale": false,
  "price": "",
  "saleEndDate": "",
  "saleEndDateInput": "",
  "saleEndDateMoment": "",
  "salePrice": "",
  "salePriceChecked": false,
  "saleStartDate": "",
  "saleStartDateInput": "",
  "saleStartDateMoment": "",
  "sku": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": {
    "type": "moment",
  },
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
  "type": "default",
}
`;

exports[`Details reducer should set the start time 1`] = `
{
  "attendeeInfoFields": [],
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "iac": "none",
  "on_sale": false,
  "price": "",
  "saleEndDate": "",
  "saleEndDateInput": "",
  "saleEndDateMoment": "",
  "salePrice": "",
  "salePriceChecked": false,
  "saleStartDate": "",
  "saleStartDateInput": "",
  "saleStartDateMoment": "",
  "sku": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "13:45",
  "startTimeInput": "7:30 pm",
  "title": "",
  "type": "default",
}
`;

exports[`Details reducer should set the start time input 1`] = `
{
  "attendeeInfoFields": [],
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "iac": "none",
  "on_sale": false,
  "price": "",
  "saleEndDate": "",
  "saleEndDateInput": "",
  "saleEndDateMoment": "",
  "salePrice": "",
  "salePriceChecked": false,
  "saleStartDate": "",
  "saleStartDateInput": "",
  "saleStartDateMoment": "",
  "sku": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "13:45",
  "title": "",
  "type": "default",
}
`;

exports[`Details reducer should set the title 1`] = `
{
  "attendeeInfoFields": [],
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "iac": "none",
  "on_sale": false,
  "price": "",
  "saleEndDate": "",
  "saleEndDateInput": "",
  "saleEndDateMoment": "",
  "salePrice": "",
  "salePriceChecked": false,
  "saleStartDate": "",
  "saleStartDateInput": "",
  "saleStartDateMoment": "",
  "sku": "",
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "new title",
  "type": "default",
}
`;
